# assignments

./: README.md  delete_this.toml  pyproject.toml  pyproject_old.toml
.github/workflows/: ci-pipeline.yml  ci_pipeline.yml  pipeline.yml  python-package.yml
life_expectancy/: cleaning.py
life_expectancy/tests/: test_cleaning.py
